# projet-inverse-2d

./: .gitignore  CMakeLists.txt  CMakeLists_BACKUP.txt  Dockerfile.ci  README.md  log.csv  maille.hpp  projet_lumiere.ipynb  solveur.hpp  spreading.cpp
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
data/: case_1_spatial.csv  case_1_temporal.csv  case_2_spatial.csv  case_2_temporal - Copy.csv  case_2_temporal.csv  case_3_spatial.csv  dataframe_1.csv  dataframe_2.csv  df_1.csv  df_1_test.csv  df_2.csv  df_2_test.csv  df_pred.csv  df_rho.csv  df_simu - Copy (2).csv  df_simu - Copy.csv  df_simu.csv  df_spatial.csv  df_spatial_dirac.csv  df_spatial_olson.csv  df_temporal.csv  df_temporal_dirac.csv  df_temporal_olson.csv  df_true.csv  fichier_export_csv.csv  log.csv  log1.csv  log1_test.csv  log2.csv  log2_test.csv  part1.sds  part_1.sds
data/anim/: animation.0.csv  animation.1.csv  animation.10.csv  animation.100.csv  animation.1000.csv  animation.1001.csv  animation.1002.csv  animation.1003.csv  animation.1004.csv  animation.1005.csv  animation.1006.csv  animation.1007.csv  animation.1008.csv  animation.1009.csv  animation.101.csv  animation.1010.csv  animation.1011.csv  animation.1012.csv  animation.1013.csv  animation.1014.csv  animation.1015.csv  animation.1016.csv  animation.1017.csv  animation.1018.csv  animation.1019.csv  animation.102.csv  animation.1020.csv  animation.1021.csv  animation.1022.csv  animation.1023.csv  animation.1024.csv  animation.1025.csv  animation.1026.csv  animation.1027.csv  animation.1028.csv  animation.1029.csv  animation.103.csv  animation.1030.csv  animation.1031.csv  animation.1032.csv  (+1471 more)
data/img/: config.docx  ~$config.docx  ~WRL1687.tmp
doc/: rapport.docx  rapport_ENG.docx  rapport_v0 _old.docx  rapport_v0.docx  rapport_v1.docx  rapport_vfinale.docx  ~$pport_vfinale.docx
doc/eng/: report.docx
doc/fr/: MastersDoctoralThesis.cls  bibliographie.bib  pdflatex4036.fls  plan.txt  rapport.aux  rapport.bbl  rapport.bcf  rapport.blg  rapport.dvi  rapport.fdb_latexmk  rapport.fls  rapport.out  rapport.run.xml  rapport.tex  rapport.toc
doc/presentation/: IFES-beamer.cls  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.nav  main.out  main.run.xml  main.snm  main.tex  main.toc  main.vrb  main1-blx.aux  main1-blx.blg  plan.txt
legacy/: maille_old.cpp  maille_old.hpp  solveur_old.cpp  solveur_old.hpp  spreading_backup.cpp
rapport/: projetM1.tex  rapport_v0.docx
src/: CMakeLists.txt  a.hpp  config.cfg  config.cpp  config.hpp  config_fixe.cfg  config_gaussienne.cfg  exporter.cpp  maille.cpp  maille.hpp  main  main.cpp  mesh.cpp  solver.cpp  solver.hpp  solveur.cpp  solveur.hpp  spreading.cpp  test_debug.cpp
src/backup/: maille_old.cpp
src/config/: case_1.cfg  case_2.cfg  case_3.cfg  case_3_epsilon.cfg  case_4.cfg  data_dump.sh  data_dump2.sh  data_dump3.sh  data_dump4.sh  data_dump5.sh  dirac.cfg  dump.cfg  (+28 more)
tools/: config_1.cfg  config_gaussienne.cfg  config_test.cfg
(+105 files in other folders)
